<resources>
    <string name="app_name">PI_03_Equipe_01</string>
    <string name="signUpText">Cadastro</string>
    <string name="fullNameEditText">Nome Completo</string>
    <string name="emailEditText">Email</string>
    <string name="phoneEditText">Telefone</string>
    <string name="passwordEditText">Senha</string>
    <string name="signUpButton">Cadastrar</string>
    <string name="informationsButton">Voltar</string>
    <string name="historyText">Histórico</string>
    <string name="historyId">Id</string>
    <string name="historyDate">Data</string>
    <string name="historyStatus">Status</string>
    <string name="informationText">Informações</string>
    <string name="informationRisk">Risco:</string>
    <string name="informationDescription">Descrição:</string>
    <string name="informationId">ID:</string>
    <string name="informationStatus">Status:</string>
    <string name="informationDate">Data:</string>
    <string name="informationLocation">Localização:</string>
    <string name="signUpLogin0">Já possui uma conta?</string>
    <string name="signUpLogin1">Entrar</string>
    <string name="riskText">Registrar risco</string>
    <string name="riskType">Tipo de risco</string>
    <string name="riskLoc">Localização</string>
    <string name="riskDesc">Descrição</string>
    <string name="riskAnex">Anexar</string>
    <string name="riskSent">Enviar</string>
    <string name="loginButton">Entrar</string>
    <string name="login">Login</string>
    <string name="entrar">Entrar</string>
    <string name="signInToSignUp0">Ainda não tem uma conta?</string>
    <string name="signInToSignUp1">Cadastre-se</string>
</resources>