<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Information"
    >
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="600dp"
        android:text="@string/informationText"
        android:textColor="@color/green"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Tabela única com linhas internas -->
    <LinearLayout
        android:id="@+id/tabela"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/borda"
        android:layout_marginTop="95dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Linha 1: Risco -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:id="@+id/riskLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informationRisk"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/riskTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:text="Exemplo de risco"
                android:textColor="@color/black" />
        </LinearLayout>

        <!-- Divisor -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000" />

        <!-- Linha 2: Descrição -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:id="@+id/descriptionLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informationDescription"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:text="Descrição completa o-fsaopfjopasmdpasmpdnmaspnmdip asjnmdiohjansiofjcvoijgi0rsjtgf iopsjdmfiojks ai0fjasd0iop fjkapda oldo problema"
                android:textColor="@color/black"
                android:breakStrategy="simple" />
        </LinearLayout>

        <!-- Divisor -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000" />

        <!-- Linha 3: ID, Status, Data, Localização -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <!-- ID e Status -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ID"
                    android:textColor="#B3B3B3" />

                <TextView
                    android:id="@+id/txtIdValor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="0004"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Status"
                    android:textColor="#B3B3B3" />
                <ImageView
                    android:id="@+id/statusDotInformations"
                    android:layout_width="12dp"
                    android:layout_gravity="center_vertical"
                    android:layout_height="12dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_circle_gray" />

                <TextView
                    android:id="@+id/txtStatusValor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text=" Finalizado"
                    android:textColor="@color/gray_2" />
            </LinearLayout>

            <!-- Data -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Data"
                    android:textColor="#B3B3B3" />

                <TextView
                    android:id="@+id/txtDataValor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="24/02/2025"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Localização"
                android:layout_marginRight="6dp"
                android:textColor="#B3B3B3" />
            <!-- Localização -->
            <TextView
                android:id="@+id/txtLocalizacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Av. Reitor Benedito José Barreto Fonseca, H15"
                android:textColor="@color/black"
                android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        app:icon="@drawable/ic_back_buttons_20"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginBottom="125dp"

        android:backgroundTint="@color/green"
        android:text="@string/informationsButton"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:cornerRadius="12dp"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>